--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
           ><span class="logo-studio">Studio</span></a
         >
         <ul class="nav-list list">
-          <li class="nav-item item">
+          <li class="nav-item">
             <a class="nav-link link" href="./index.html">Studio</a>
           </li>
-          <li class="nav-item item">
+          <li class="nav-item">
             <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item item">
+          <li class="nav-item">
             <a class="nav-link link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul class="address-list list">
-          <li class="address-item item">
+          <li class="address-item">
             <a class="mail-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="address-item item">
+          <li class="address-item">
             <a class="tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -52,7 +52,7 @@
 
     <main class="main">
       <!-- Hero -->
-      <section class="hero">
+      <section class="hero section">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
@@ -60,30 +60,30 @@
       <section class="feature section">
         <h2 class="feature-title title">Feature</h2>
         <ul class="feature-list list">
-          <li class="feature-item item">
-            <h3 class="feature-subtitle subtitle">Strategy</h3>
-            <p class="feature-text text">
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="feature-item item">
-            <h3 class="feature-subtitle subtitle">Punctuality</h3>
-            <p class="feature-text text">
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="feature-item item">
-            <h3 class="feature-subtitle subtitle">Diligence</h3>
-            <p class="feature-text text">
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="feature-item item">
-            <h3 class="feature-subtitle subtitle">Technologies</h3>
-            <p class="feature-text text">
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -91,7 +91,7 @@
         </ul>
       </section>
       <!-- What are we doing -->
-      <section class="section">
+      <section class="works section">
         <h2 class="section-title title">What are we doing</h2>
         <ul class="list">
           <li class="item">
@@ -124,7 +124,7 @@
       <section class="team section">
         <h2 class="team-title title">Our Team</h2>
         <ul class="team-list list">
-          <li class="team-item item">
+          <li class="team-item">
             <img
               src="./images/team/mark-guerrero.jpg"
               alt="Mark"
@@ -134,7 +134,7 @@
             <h3 class="subtitle">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li class="team-item item">
+          <li class="team-item">
             <img
               src="./images/team/tom-ford.jpg"
               alt="Tom"
@@ -144,7 +144,7 @@
             <h3 class="subtitle">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li class="team-item item">
+          <li class="team-item">
             <img
               src="./images/team/camila-garcia.jpg"
               alt="Camila"
@@ -154,7 +154,7 @@
             <h3 class="subtitle">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li class="team-item item">
+          <li class="team-item">
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="Daniel"
