--- a/portfolio.html
+++ b/portfolio.html
@@ -25,25 +25,25 @@
           ><span class="logo-studio">Studio</span></a
         >
         <ul class="nav-list list">
-          <li class="nav-item item">
+          <li class="nav-item">
             <a class="nav-link link" href="./index.html">Studio</a>
           </li>
-          <li class="nav-item item">
+          <li class="nav-item">
             <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="nav-item item">
+          <li class="nav-item">
             <a class="nav-link link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul class="address-list list">
-          <li class="address-item item">
+          <li class="address-item">
             <a class="mail-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="address-item item">
+          <li class="address-item">
             <a class="tel-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
