--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               height="260"
             />
             <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
+            <p class="team-text">Product Designer</p>
           </li>
           <li class="team-item">
             <img
@@ -144,7 +144,7 @@
               height="260"
             />
             <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
@@ -154,7 +154,7 @@
               height="260"
             />
             <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="text">Marketing</p>
+            <p class="team-text">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -164,7 +164,7 @@
               height="260"
             />
             <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -179,6 +179,6 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    </footer>
+    </footer>    
   </body>
 </html>
