--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <!-- Сustom styles -->
@@ -60,7 +60,7 @@
       </section>
       <!-- Feature -->
       <section class="feature section">
-        <h2 class="feature-title">Feature</h2>
+        <h2 class="feature-title hidden">Feature</h2>
         <ul class="feature-list list">
           <li class="feature-item">
             <h3 class="feature-subtitle">Strategy</h3>
@@ -173,12 +173,13 @@
     <!-- Footer -->
     <footer class="footer">
       <a class="footer-logo link" href="./index.html"
-        ><span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span></a
+        ><span class="footer-logo-web">Web</span
+        ><span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    </footer>    
+    </footer>
   </body>
 </html>
