--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <!-- Сustom styles -->
@@ -17,7 +17,7 @@
   </head>
 
   <body class="page">
-    <!-- Header -->    
+    <!-- Header -->
     <header class="header">
       <nav class="site-nav">
         <a class="header-logo link" href="./index.html"
@@ -55,13 +55,17 @@
     <main class="main">
       <!-- Portfolio cards -->
       <section class="portfolio section">
-        <h1 class="portfolio-title">Portfolio cards</h1>
+        <h1 class="portfolio-title hidden">Portfolio cards</h1>
         <ul class="portfolio-buttons list">
-          <li class="item"><button class="portfolio-btn" type="button">All</button></li>
+          <li class="item">
+            <button class="portfolio-btn" type="button">All</button>
+          </li>
           <li class="item">
             <button class="portfolio-btn" type="button">Web Site</button>
           </li>
-          <li class="item"><button class="portfolio-btn" type="button">App</button></li>
+          <li class="item">
+            <button class="portfolio-btn" type="button">App</button>
+          </li>
           <li class="item">
             <button class="portfolio-btn" type="button">Design</button>
           </li>
@@ -168,7 +172,8 @@
     <!-- Footer -->
     <footer class="footer">
       <a class="footer-logo link" href="./index.html"
-        ><span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span></a
+        ><span class="footer-logo-web">Web</span
+        ><span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
