--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="address-list list">
           <li class="address-item">
             <a class="mail-link link" href="mailto:info@devstudio.com"
