--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
     <!-- Footer -->
     <footer class="footer">
       <a class="footer-logo link" href="./index.html"
-        ><span class="footer-logo-web">Web</span
-        ><span class="footer-logo-studio">Studio</span></a
+        >Web<span class="footer-logo-studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
