--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         >
         <ul class="nav-list list">
           <li class="nav-item">
-            <a class="nav-link link" href="./index.html">Studio</a>
+            <a class="link" href="./index.html">Studio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+            <a class="link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link" href="">Contacts</a>
+            <a class="link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
