--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
         >
         <ul class="nav-list list">
           <li class="nav-item">
-            <a class="link" href="./index.html">Studio</a>
+            <a class="nav-link link" href="./index.html">Studio</a>
           </li>
           <li class="nav-item">
-            <a class="link" href="./portfolio.html">Portfolio</a>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="link" href="">Contacts</a>
+            <a class="nav-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="address">
         <ul class="address-list list">
           <li class="address-item">
-            <a class="mail-link link" href="mailto:info@devstudio.com"
+            <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="address-item">
-            <a class="tel-link link" href="tel:+110001111111"
+            <a class="address-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
